--- a/sr_top500_banlist_ad.conf
+++ b/sr_top500_banlist_ad.conf
@@ -21886,6 +21886,64 @@ IP-CIDR,74.125.23.127/32,Proxy
 DOMAIN-SUFFIX,news.ycombinator.com,Proxy
 
 
+#onedrive
+DOMAIN-SUFFIX,onedrive.com,Proxy
+DOMAIN-SUFFIX,*.onedrive.com,Proxy
+DOMAIN-SUFFIX,onedrive.live.com,Proxy
+DOMAIN-SUFFIX,login.live.com,Proxy
+DOMAIN-SUFFIX,g.live.com,Proxy
+DOMAIN-SUFFIX,spoprod-a.akamaihd.net,Proxy
+DOMAIN-SUFFIX,*.mesh.com,Proxy
+DOMAIN-SUFFIX,p.sfx.ms,Proxy
+DOMAIN-SUFFIX,oneclient.sfx.ms,Proxy
+DOMAIN-SUFFIX,*.microsoft.com,Proxy
+DOMAIN-SUFFIX,fabric.io,Proxy
+DOMAIN-SUFFIX,*.crashlytics.com,Proxy
+DOMAIN-SUFFIX,vortex.data.microsoft.com,Proxy
+DOMAIN-SUFFIX,posarprodcssservice.accesscontrol.windows.net,Proxy
+DOMAIN-SUFFIX,redemptionservices.accesscontrol.windows.net,Proxy
+DOMAIN-SUFFIX,token.cp.microsoft.com,Proxy
+DOMAIN-SUFFIX,tokensit.cp.microsoft-tst.com,Proxy
+DOMAIN-SUFFIX,*.office.com,Proxy
+DOMAIN-SUFFIX,*.officeapps.live.com,Proxy
+DOMAIN-SUFFIX,*.aria.microsoft.com,Proxy
+DOMAIN-SUFFIX,*.mobileengagement.windows.net,Proxy
+DOMAIN-SUFFIX,*.branch.io,Proxy
+DOMAIN-SUFFIX,*.adjust.com,Proxy
+DOMAIN-SUFFIX,*.servicebus.windows.net,Proxy
+DOMAIN-SUFFIX,vas.samsungapps.com,Proxy
+DOMAIN-SUFFIX,odc.officeapps.live.com,Proxy
+DOMAIN-SUFFIX,login.windows.net,Proxy
+DOMAIN-SUFFIX,login.microsoftonline.com,Proxy
+DOMAIN-SUFFIX,*.files.1drv.com,Proxy
+DOMAIN-SUFFIX,*.onedrive.live.com,Proxy
+DOMAIN-SUFFIX,*.*.onedrive.live.com,Proxy
+DOMAIN-SUFFIX,storage.live.com,Proxy
+DOMAIN-SUFFIX,*.storage.live.com,Proxy
+DOMAIN-SUFFIX,*.*.storage.live.com,Proxy
+DOMAIN-SUFFIX,*.groups.office.live.com,Proxy
+DOMAIN-SUFFIX,*.groups.photos.live.com,Proxy
+DOMAIN-SUFFIX,*.groups.skydrive.live.com,Proxy
+DOMAIN-SUFFIX,favorites.live.com,Proxy
+DOMAIN-SUFFIX,oauth.live.com,Proxy
+DOMAIN-SUFFIX,photos.live.com,Proxy
+DOMAIN-SUFFIX,skydrive.live.com,Proxy
+DOMAIN-SUFFIX,api.live.net,Proxy
+DOMAIN-SUFFIX,apis.live.net,Proxy
+DOMAIN-SUFFIX,docs.live.net,Proxy
+DOMAIN-SUFFIX,*.docs.live.net,Proxy
+DOMAIN-SUFFIX,policies.live.net,Proxy
+DOMAIN-SUFFIX,*.policies.live.net,Proxy
+DOMAIN-SUFFIX,settings.live.net,Proxy
+DOMAIN-SUFFIX,*.settings.live.net,Proxy
+DOMAIN-SUFFIX,skyapi.live.net,Proxy
+DOMAIN-SUFFIX,snapi.live.net,Proxy
+DOMAIN-SUFFIX,*.livefilestore.com,Proxy
+DOMAIN-SUFFIX,*.*.livefilestore.com,Proxy
+DOMAIN-SUFFIX,storage.msn.com,Proxy
+DOMAIN-SUFFIX,*.storage.msn.com,Proxy
+DOMAIN-SUFFIX,*.*.storage.msn.com,Proxy
+
 FINAL,direct
 
 [URL Rewrite]
