--- a/sr_top500_banlist.conf
+++ b/sr_top500_banlist.conf
@@ -5609,8 +5609,9 @@ IP-CIDR,74.125.23.127/32,Proxy
 # hacker news web site
 DOMAIN-SUFFIX,news.ycombinator.com,Proxy
 
+
 #onedrive
-#onedrive
+DOMAIN-SUFFIX,graph.microsoft.com,Proxy
 DOMAIN-SUFFIX,onedrive.com,Proxy
 DOMAIN-SUFFIX,*.onedrive.com,Proxy
 DOMAIN-SUFFIX,onedrive.live.com,Proxy
