--- a/sr_top500_banlist_ad.conf
+++ b/sr_top500_banlist_ad.conf
@@ -21887,6 +21887,7 @@ DOMAIN-SUFFIX,news.ycombinator.com,Proxy
 
 
 #onedrive
+DOMAIN-SUFFIX,graph.microsoft.com,Proxy
 DOMAIN-SUFFIX,onedrive.com,Proxy
 DOMAIN-SUFFIX,*.onedrive.com,Proxy
 DOMAIN-SUFFIX,onedrive.live.com,Proxy
